Edits after feedback meeting

--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <header>
 	<div class="row">
 		<div class="medium-6 columns">
-			<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
+			<%=link_to image_tag("header_logos.png", alt: "King's College London Logo", width:"100%"),"http://www.kcl.ac.uk/index.aspx"%>
 		</div>
 				<div class="medium-2 columns">
 			<%=image_tag("do1thing_logo.png", alt: "Do1Thing Logo", height:"10")%>
@@ -63,7 +63,7 @@
 <div class="large-2 columns" align="right">
 	<ul class="menu">
 		<li>
-			<%= social_share_button_tag("Do1Thing") %>
+			<%= social_share_button_tag("Do1Thing", url:"www.kcldo1thing.com", 'data-twitter-title'=>'www.kcldo1thing.com') %>
 		</li>
 </ul>
 </div>
