--- a/do_one_thing/app/views/welcome/about.html.erb
+++ b/do_one_thing/app/views/welcome/about.html.erb
@@ -10,11 +10,11 @@
 <div class="row">
 	<div class="large-12 columns">
 		<p> How do I prepare myself for my future? Where do I start? Which activities do other people rate?
-			We recognise it can be hard to find the nest opportunites for you. But if you #do1thing you'' probably
+			We recognise it can be hard to find the best opportunites for you. But if you #do1thing you will probably
 		</p>
 		<ul>
 			<li>Learn something about yourself</li>
-			<li>Realise what you do, or really dont, want to do
+			<li>Realise what you do, or really don't, want to do
 			</li>
 			<li>Meet some interesting people
 			</li>
@@ -23,7 +23,7 @@
 		<p> Who knows... you might just do another thing and another! </p>
 		<h4> #do1thing </h4>
 				<ul>
-			<li> Is designed specifically for the 4600 research staff and postgraduate research students at King’s</li>
+			<li> Is designed specifically for the 4,700 research staff and postgraduate research students at King’s</li>
 			<li>Gives you up to date info on the best activities currently available at King’s
 			</li>
 			<li>Welcomes content – contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a>
