--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -132,10 +132,10 @@
 				<li class="disabled">Previous <span class="show-for-sr">page</span></li>
 				<li class="current"><span class="show-for-sr">You're on page</span> 1</li>
 				<li><a href="latest_opportunities/2" aria-label="Page 2">2</a></li>
-					<% if @jobs.length >9 %>
+					<% if @jobs.length >19 %>
 						<li><a href="#" aria-label="Page 3">3</a></li>
 					<%end %>
-				<li><a href="#" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
+				<li><a href="latest_opportunities/2" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
 			</ul>
 		<% end %>
 	</div>
