--- a/app/views/welcome/latest_opportunities.html.erb
+++ b/app/views/welcome/latest_opportunities.html.erb
@@ -1,36 +1,36 @@
 <% @title=params[:no] %>
 
 <hr class='top'>
-<div class="row column">
-<h4 style="margin: 0;" class="text-center">MORE OPPORTUNITES</h4>
-</div>
+	<div class="row column">
+		<h4 style="margin: 0;" class="text-center">MORE OPPORTUNITES</h4>
+	</div>
 <hr class ='bottom'>
 
 <div class="row">
-		<div class="large-12 columns">
-<% oc=0 %>
-<% oclim = 2+(6*(params[:no].to_i-2)) %>
-<% @jobs.reverse.each do |message| %> 
-<% if oc<oclim %>
-<% oc = oc+1 %>
-<% else %>
-<div class="row">
-<div class="large-6 columns">
-<%=image_tag(message.photo.url, alt:  message.name, width:"100%")%>
+	<div class="large-12 columns">
+		<% oc=0 %>
+		<% oclim = 2+(6*(params[:no].to_i-2)) %>
+		<% @jobs.reverse.each do |message| %> 
+			<% if oc<oclim %>
+				<% oc = oc+1 %>
+			<% else %>
+				<div class="row">
+					<div class="large-6 columns">
+						<% url="opportunity/" + message.url %>
+						<%=link_to image_tag(message.photo.url, alt:  message.name, width:"100%"),url %>
+					</div>
+					<div class="large-6 columns">
+						<% full_url=request.base_url+"/"+url%>
+						<h5><a class='OT' href=<%= url %>> <p><%= message.name %></p> </a></h5>
+						<p> <%= message.tagline %> </p>
+						<p class="time">Opportunity added on: <%= message.release.to_date.strftime("%d/%m/%Y") %>. Live until: <%= message.expiry.to_date.strftime("%d/%m/%Y") %></p>
+						<%= social_share_button_tag(message.name, :url=>full_url) %>
+						<p class="content"><%= message.short %></p> 
+					</div>
+				</div>
+				<hr>
+			<% end %>
+		<% end %>
+	</div>
 </div>
-<div class="large-6 columns">
-<% url="opportunity/" + message.url %>
-<h5><a class='OT' href=<%= url %>> <p><%= message.name %></p> </a></h5>
-<p>
-<span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
-<span><i class="fi-calendar"> <p class="time"><%= message.created_at.to_date %></p>  &nbsp;&nbsp;</i></span>
-</p>
-<p class="content"><%= message.short %></p> 
-</div>
-</div>
-<hr>
-<% end %>
-<% end %>
-</div>
-
 <br>
