--- a/app/views/welcome/latest_opportunities.html.erb
+++ b/app/views/welcome/latest_opportunities.html.erb
@@ -55,7 +55,7 @@
 						<li><a href="latest_opportunities/3" aria-label="Page 3">3</a></li>
 					<%end %>
 					<% pagenow = "latest_opportunities/"+params[:no].s %>
-				<li><a href=<% pagenow %> aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
+				<li><a href= <%= pagenow %> aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
 			</ul>
 		<% end %>
 	</div>
