--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 		<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
 	</div>
 	<div class="large-8 columns">
-	<p>&copy; 2016&nbsp;King's College London | Strand | London WC2R 2LS | England | United Kingdom | Tel +44 (0)20 7836 5454</p>
+	<p><small>&copy; 2016&nbsp;King's College London | Strand | London WC2R 2LS | England | United Kingdom | Tel +44 (0)20 7836 5454</small></p>
 	<% if not user_signed_in? %>
 		<p class="pfooter"><small><%= link_to "Sign in", new_user_session_path %> </small></p>
 	<% end %>
