--- a/app/views/welcome/latest_opportunities.html.erb
+++ b/app/views/welcome/latest_opportunities.html.erb
@@ -2,7 +2,7 @@
 
 <hr class='top'>
 	<div class="row column">
-		<h4 style="margin: 0;" class="text-center">MORE OPPORITUNITES</h4>
+		<h4 style="margin: 0;" class="text-center">MORE OPPORTUNITIES</h4>
 	</div>
 <hr class ='bottom'>
 
