--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 			<%=link_to image_tag("header_logos.png", alt: "King's College London Logo", width:"100%"),"http://www.kcl.ac.uk/index.aspx"%>
 		</div>
 				<div class="medium-2 columns">
-			<%=image_tag("do1thing_logo.png", alt: "Do1Thing Logo", height:"10")%>
+			<%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", height:"10"), "/index"%>
 		</div>
 	</div>
 
