--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
 	<div class="large-12 columns">
 		<p> How do I prepare myself for my future? Where do I start? Which activities do other people rate?
-			We recognise it can be hard to find the best opportunites for you. But if you #do1thing you will probably
+			We recognise it can be hard to find the best opportunites for you. But if you #do1thing you will probably;
 		</p>
 		<ul>
 			<li>Learn something about yourself</li>
@@ -28,7 +28,7 @@
 			</li>
 			<li>Welcomes content – contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a>
 			</li>
-			<li>  Is a project delivered by the King’s Research Consultancy, funded by the Researcher Development Unit and Centre for Research Staff Development</li>
+			<li>  Is a project delivered by King’s PhD students through the King’s Research Consultancy, funded by the Researcher Development Unit and Centre for Research Staff Development</li>
 		</ul>
 	</div>
 </div>
