--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 			<div class="top-bar">
 				<div class="top-bar-left">
 					<ul class="menu">
-						<li><a href="/index" class='First'>HOME</a></li>
+						<li><a href="/index">HOME</a></li>
 						<li><a href="/about">ABOUT</a></li>
 						<li><a href="/contact_us">CONTACT US</a></li>
 					</ul>
