--- a/app/views/welcome/latest_opportunities.html.erb
+++ b/app/views/welcome/latest_opportunities.html.erb
@@ -37,10 +37,10 @@
 		<% end %>
 
 		<ul class="pagination" role="navigation" aria-label="Pagination">
-			<li class="disabled">Previous <span class="show-for-sr">page</span></li>
+			<li><a href="/index" aria-label="Previous page">Previous <span class="show-for-sr">page</span></a></li>
 			<li><a href="/index" aria-label="Page 1">1</a></li>
 			<li class="current"><span class="show-for-sr">You're on page</span> 2</li>
-			<li><a href="/index" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
+			<li class="disabled">Next <span class="show-for-sr">page</span></li>
 			</ul>
 	</div>
 </div>
