--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,7 +31,7 @@
 <hr class='bottom'>
 
 <div class="row">
-	<% @jobs.reverse.each do |message| %> 
+	<% @jobs.order([:release]).reverse.each do |message| %> 
 		<%if message.primary==true %>
 			<div class="medium-8 columns">
 				<% url="opportunity/" + message.url %>
@@ -44,7 +44,7 @@
 		<% end %>
 	<% end %>
 	
-	<% @jobs.reverse.each do |message| %> 
+	<% @jobs.order([:release]).reverse.each do |message| %> 
 	<% sc=0 %>
 		<%if message.secondary==true and sc<2 %>
 			<%sc=sc+1 %>
@@ -67,7 +67,7 @@
 
 <div class="row small-up-3 medium-up-4 large-up-5">
 	<% sarray=[] %>
-	<% @jobs.reverse.each do |message| %>
+	<% @jobs.order([:release]).reverse.each do |message| %> 
 		<% if message.release.to_date < Time.now %>
 			<% if message.expiry.to_date > Time.now %>
 				<% ssaray=[] %>
@@ -103,7 +103,7 @@
 	<div class="large-12 columns">
 		<p>Do you have an opportunity you’d like to see featured here?  Please <a href="/contact_us">contact us</a> to find out how.</p>
 		<% oc=0 %>
-		<% @jobs.reverse.each do |message| %> 
+		<% @jobs.order([:release]).reverse.each do |message| %> 
 			<% if oc<10 %>
 				<% if message.release.to_date < Time.now %>
 					<% if message.expiry.to_date > Time.now %>
