--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
 
 <header>
 	<div class="row">
-		<div class="medium-8 columns">
-			<%=link_to image_tag("header_logos.png", alt: "King's College London Logo", width:"100%"),"http://www.kcl.ac.uk/index.aspx"%>
-		</div>
-				<div class="medium-2 columns">
-			<%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", height:"10"), "/index"%>
-		</div>
+		<div class="small-12 columns">
+			<%=link_to image_tag("KCL_LOGO.png", alt: "King's College London Logo", title: "King's College London Logo"),"http://www.kcl.ac.uk/index.aspx"%>
+			<%=link_to image_tag("CAREERS.png", alt: "Careers Logo", title: "Careers Logo"),"http://www.kcl.ac.uk/campuslife/services/careers/index.aspx"%>
+			<%=link_to image_tag("GRADUATE_SCHOOL.png", alt: "Graduate School Logo", title: "Graduate School Logo")," http://www.kcl.ac.uk/study/graduate-school/researcher-development/index.aspx"%>
+			<%=link_to image_tag("CENTRE.png", alt: "Centre for Research Staff Development Logo", title:"Centre for Research Staff Development Logo"),"http://www.kcl.ac.uk/study/graduate-school/researcher-development/Research-Staff/information-for-research-staff.aspx"%>
+			<%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", title: "Do1Thing Logo", width:"182"), "/index"%>
 	</div>
-
+</div>
 	<div class="row">
 		<div class="medium-12 columns">
 			<div class="top-bar">
@@ -51,8 +51,8 @@
 
 <footer>
 <div class="row expanded callout secondary">
-	<div class="large-2 columns">
-		<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
+	<div class="large-1 columns">
+		<%=image_tag("KCL_LOGO.png", alt: "King's College London Logo", width:"100%")%>
 	</div>
 	<div class="large-8 columns">
 	<p><small>&copy; 2016&nbsp;King's College London | Strand | London WC2R 2LS | England | United Kingdom | Tel +44 (0)20 7836 5454</small></p>
