--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,3 +1,4 @@
+//CSS that overides the foundation defaults
 @charset 'utf-8';
 
 @import 'settings';
@@ -52,7 +53,10 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
-.top-bar ul{ 
+//This is the custom css for the site
+//This overides the foundation css
+
+.top-bar ul{
 	font-family: impact;
 	font-size: map-get(map-get($header-sizes, small), h1) * 1px;
 	color: black;
@@ -72,11 +76,11 @@ hr{
 }
 
 hr.top{
-	background-image: linear-gradient(to right, white, #0A2D50, white); 
+	background-image: linear-gradient(to right, white, #0A2D50, white);
 }
 
 hr.bottom{
-	background-image: linear-gradient(to right, white, #501491, white); 
+	background-image: linear-gradient(to right, white, #501491, white);
 }
 
 a.OT {
