Added hamburger menu for small screeens and optimised logos for each screen size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,36 +13,72 @@
 
 <header>
 	<div class="row">
-		<div class="small-12 columns">
+		<div class="small-12 columns hide-for-small-only  hide-for-medium-only hide-for-large-only">
+      <div class="image_wrapper">
 			<%=link_to image_tag("KCL_LOGO.png", alt: "King's College London Logo", title: "King's College London Logo"),"http://www.kcl.ac.uk/index.aspx"%>
 			<%=link_to image_tag("CAREERS.png", alt: "Careers Logo", title: "Careers Logo"),"http://www.kcl.ac.uk/campuslife/services/careers/index.aspx"%>
 			<%=link_to image_tag("GRADUATE_SCHOOL.png", alt: "Graduate School Logo", title: "Graduate School Logo")," http://www.kcl.ac.uk/study/graduate-school/researcher-development/index.aspx"%>
 			<%=link_to image_tag("CENTRE.png", alt: "Centre for Research Staff Development Logo", title:"Centre for Research Staff Development Logo"),"http://www.kcl.ac.uk/study/graduate-school/researcher-development/Research-Staff/information-for-research-staff.aspx"%>
 			<%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", title: "Do1Thing Logo", width:"182"), "/index"%>
 	</div>
+  </div>
+
+  <div class="medium-12 columns show-for-large-only">
+  <%=link_to image_tag("medium.png", alt: "King's College London Logo, and Corresponding Graduate School etc logos", title: "King's College London Logo, and Corresponding Graduate School etc logos",width:"805"),"http://www.kcl.ac.uk/index.aspx"%>
+    <%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", title: "Do1Thing Logo", width:"144"), "/index"%>
 </div>
-	<div class="row">
-		<div class="medium-12 columns">
-			<div class="top-bar">
-				<div class="top-bar-left">
-					<ul class="menu">
-						<li><a href="/index">HOME</a></li>
-						<li><a href="/about">ABOUT</a></li>
-						<li><a href="/contact_us">CONTACT US</a></li>
-					</ul>
-				</div>
-				<div class="top-bar-right">
-					<% if user_signed_in? %>
-					<ul class="dropdown menu" data-dropdown-menu>
-						<li><%= link_to "Admin", '/admin' %></li>
-  						<li><%= link_to "Profile", edit_user_registration_path %></li>
-  						<li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-					</ul>
-					<% end %>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="medium-12 columns show-for-medium-only">
+  <%=link_to image_tag("medium.png", alt: "King's College London Logo, and Corresponding Graduate School etc logos", title: "King's College London Logo, and Corresponding Graduate School etc logos",width:"614"),"http://www.kcl.ac.uk/index.aspx"%>
+    <%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", title: "Do1Thing Logo", width:"100"), "/index"%>
+</div>
+  <div class="small-12 columns show-for-small-only">
+    	<%=link_to image_tag("all_together.png", alt: "King's College London Logo, and Corresponding Graduate School etc logos", title: "King's College London Logo, and Corresponding Graduate School etc logos"),"http://www.kcl.ac.uk/index.aspx"%>
+  </div>
+</div>
+<div class="row show-for-small-only">
+  <div class="small-12 columns">
+        <div class="top-bar">
+<ul class="vertical menu" data-accordion-menu>
+  <li>
+    <a href="#">Menu</a>
+    <ul class="menu vertical nested">
+      <li><a href="/index">HOME</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/contact_us">CONTACT US</a></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "Admin", '/admin' %></li>
+        <li><%= link_to "Profile", edit_user_registration_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+      <% end %>
+    </ul>
+  </li>
+</ul>
+</div>
+</div>
+</div>
+
+<div class="row hide-for-small-only">
+  <div class="medium-12 columns">
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li><a href="/index">HOME</a></li>
+          <li><a href="/about">ABOUT</a></li>
+          <li><a href="/contact_us">CONTACT US</a></li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <% if user_signed_in? %>
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li><%= link_to "Admin", '/admin' %></li>
+            <li><%= link_to "Profile", edit_user_registration_path %></li>
+            <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        </ul>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 </header>
 
 <%= yield %>
@@ -51,16 +87,16 @@
 
 <footer>
 <div class="row expanded callout secondary">
-	<div class="large-1 columns">
+	<div class="large-1 small-2 columns">
 		<%=image_tag("KCL_LOGO.png", alt: "King's College London Logo", width:"100%")%>
 	</div>
-	<div class="large-8 columns">
+	<div class="large-8 small-7 columns">
 	<p><small>&copy; 2016&nbsp;King's College London | Strand | London WC2R 2LS | England | United Kingdom | Tel +44 (0)20 7836 5454</small></p>
 	<% if not user_signed_in? %>
 		<p class="pfooter"><small><%= link_to "Sign in", new_user_session_path %> </small></p>
 	<% end %>
 </div>
-<div class="large-2 columns" align="right">
+<div class="large-2 small-2 columns" align="right">
 	<ul class="menu">
 		<li>
 			<%= social_share_button_tag("Do1Thing", url:"www.kcldo1thing.com", 'data-twitter-title'=>'www.kcldo1thing.com') %>
