--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -127,3 +127,17 @@ p.pfooter{
 #cookie-bar .cb-disable:hover {background:#bb0000;}
 #cookie-bar .cb-policy {background:#0033bb;}
 #cookie-bar .cb-policy:hover {background:#0055dd;}
+
+.no-js .top-bar {
+  display: none;
+}
+
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+
+  .no-js .title-bar {
+    display: none;
+  }
+}
